@startuml class_diagram

class Order {
    + orderID: int
    + customerID: int
    + orderDate: date
    + orderStatus: string
    + shippingInfo: Shipping
    + paymentInfo: Payment
}

class Customer {
    + customerID: int
    + customerName: string
    + customerEmail: string
    + customerPhone: string
    + customerAddress: string
}

class Shipping {
    + shippingID: int
    + orderID: int
    + shippingStatus: ShippingStatus
    + shippingDate: date
    + shippingAddress: string
}

class Payment {
    + paymentID: int
    + orderID: int
    + paymentStatus: PaymentStatus
    + paymentDate: date
    + paymentMethod: PaymentMethod
    + paymentAmount: double
}

enum ShippingStatus {
    READY
    SHIPPING
    DELIVERED
    CANCELLED
}

enum PaymentStatus {
    READY
    PROCESSING
    COMPLETED
    FAILED
    CANCELLED
}

enum PaymentMethod {
    CREDIT_CARD
    DEBIT_CARD
    BANK_TRANSFER
    PG
}

Customer "1" -- "0..*" Order : places
Order "1" -- "0..*" Payment : has
Order "1" -- "1" Shipping : has

@enduml